Changed Basic Attributes to Unicode

--- a/reNebula mint 16x 1.19/assets/minecraft/lang/en_ca.json
+++ b/reNebula mint 16x 1.19/assets/minecraft/lang/en_ca.json
@@ -3191,12 +3191,12 @@
   "advMode.trackOutput": "Track output",
   "mount.onboard": "Press %1$s to Dismount",
   "build.tooHigh": "Height limit for building is %s",
-  "item.modifiers.mainhand": "When in Main Hand:",
-  "item.modifiers.offhand": "When in Off Hand:",
-  "item.modifiers.feet": "When on Feet:",
-  "item.modifiers.legs": "When on Legs:",
-  "item.modifiers.chest": "When on Body:",
-  "item.modifiers.head": "When on Head:",
+  "item.modifiers.mainhand": "Stats:",
+  "item.modifiers.offhand": "Stats:",
+  "item.modifiers.feet": "Stats:",
+  "item.modifiers.legs": "Stats:",
+  "item.modifiers.chest": "Stats:",
+  "item.modifiers.head": "Stats:",
   "attribute.unknown": "Unknown attribute",
   "attribute.modifier.plus.0": "+%s %s",
   "attribute.modifier.plus.1": "+%s%% %s",
@@ -3214,12 +3214,12 @@
   "attribute.name.generic.knockback_resistance": "Knockback Resistance",
   "attribute.name.generic.movement_speed": "Speed",
   "attribute.name.generic.flying_speed": "Flying Speed",
-  "attribute.name.generic.attack_damage": "Attack Damage",
-  "attribute.name.generic.attack_knockback": "Attack Knockback",
-  "attribute.name.generic.attack_speed": "Attack Speed",
-  "attribute.name.generic.luck": "Luck",
-  "attribute.name.generic.armor": "Armor",
-  "attribute.name.generic.armor_toughness": "Armor Toughness",
+  "attribute.name.generic.attack_damage": "🗡",
+  "attribute.name.generic.attack_knockback": "🌊",
+  "attribute.name.generic.attack_speed": "⌛",
+  "attribute.name.generic.luck": "⚅",
+  "attribute.name.generic.armor": "⛨",
+  "attribute.name.generic.armor_toughness": "⧈",
   "screenshot.success": "Saved screenshot as %s",
   "screenshot.failure": "Couldn't save screenshot: %s",
   "block.minecraft.black_banner": "Black Banner",
