Shortened Enchantment Names

--- a/reNebula mint 16x 1.19/assets/minecraft/lang/en_ca.json
+++ b/reNebula mint 16x 1.19/assets/minecraft/lang/en_ca.json
@@ -2231,7 +2231,7 @@
   "item.canPlace": "Can be placed on:",
   "item.color": "Color: %s",
   "item.nbt_tags": "NBT: %s tag(s)",
-  "item.durability": "Uses: %s / %s",
+  "item.durability": "§7Uses: §r%s §7/§r %s",
   "filled_map.mansion": "Woodland Explorer Map",
   "filled_map.monument": "Ocean Explorer Map",
   "filled_map.buried_treasure": "Buried Treasure Map",
@@ -2755,45 +2755,51 @@
   "potion.potency.125": "126",
   "potion.potency.126": "127",
   "potion.potency.127": "128",
-  "enchantment.minecraft.sharpness": "Sharpness",
+
+  "enchantment.minecraft.unbreaking": "Unb.",
+  "enchantment.minecraft.mending": "Mend.",
+  
+  "enchantment.minecraft.bane_of_arthropods": "B.o.A.",
+  "enchantment.minecraft.luck_of_the_sea": "L.o.t.S.",
+  "enchantment.minecraft.respiration": "Resp.",
+  "enchantment.minecraft.aqua_affinity": "Aqua Aff.",
+  "enchantment.minecraft.depth_strider": "Depth Str.",
+  "enchantment.minecraft.soul_speed": "Soul Sp.",
+  "enchantment.minecraft.swift_sneak": "Swift Sn.",
+  
+  "enchantment.minecraft.sharpness": "Sharp.",
+  "enchantment.minecraft.knockback": "Knock.",
+  "enchantment.minecraft.sweeping": "Sweep.",
+  "enchantment.minecraft.fire_aspect": "Fire",
+  "enchantment.minecraft.protection": "Prot.",
+  "enchantment.minecraft.fire_protection": "Fire Prot.",
+  "enchantment.minecraft.feather_falling": "Fea. Fall.",
+  "enchantment.minecraft.blast_protection": "Blast Prot.",
+  "enchantment.minecraft.projectile_protection": "Proj. Prot.",
+  "enchantment.minecraft.frost_walker": "Frost Walk.",
+  "enchantment.minecraft.efficiency": "Eff.",
+  "enchantment.minecraft.silk_touch": "Silk",
+  "enchantment.minecraft.looting": "Loot.",
+  "enchantment.minecraft.fortune": "Fort.",
+  
+  "enchantment.minecraft.binding_curse": "Binding",
+  "enchantment.minecraft.vanishing_curse": "Vanishing",
+  
+  "enchantment.minecraft.infinity": "Infinity",
+  "enchantment.minecraft.loyalty": "Loyalty",
+  "enchantment.minecraft.impaling": "Impaling",
+  "enchantment.minecraft.riptide": "Riptide",
+  "enchantment.minecraft.channeling": "Channel.",
+  "enchantment.minecraft.multishot": "Multishot",
+  "enchantment.minecraft.quick_charge": "Quick Ch.",
+  "enchantment.minecraft.piercing": "Piercing",
   "enchantment.minecraft.smite": "Smite",
-  "enchantment.minecraft.bane_of_arthropods": "Bane of Arthropods",
-  "enchantment.minecraft.knockback": "Knockback",
-  "enchantment.minecraft.fire_aspect": "Fire Aspect",
-  "enchantment.minecraft.sweeping": "Sweeping Edge",
-  "enchantment.minecraft.protection": "Protection",
-  "enchantment.minecraft.fire_protection": "Fire Protection",
-  "enchantment.minecraft.feather_falling": "Feather Falling",
-  "enchantment.minecraft.blast_protection": "Blast Protection",
-  "enchantment.minecraft.projectile_protection": "Projectile Protection",
-  "enchantment.minecraft.respiration": "Respiration",
-  "enchantment.minecraft.aqua_affinity": "Aqua Affinity",
-  "enchantment.minecraft.depth_strider": "Depth Strider",
-  "enchantment.minecraft.frost_walker": "Frost Walker",
-  "enchantment.minecraft.soul_speed": "Soul Speed",
-  "enchantment.minecraft.swift_sneak": "Swift Sneak",
-  "enchantment.minecraft.efficiency": "Efficiency",
-  "enchantment.minecraft.silk_touch": "Silk Touch",
-  "enchantment.minecraft.unbreaking": "Unbreaking",
-  "enchantment.minecraft.looting": "Looting",
-  "enchantment.minecraft.fortune": "Fortune",
-  "enchantment.minecraft.luck_of_the_sea": "Luck of the Sea",
   "enchantment.minecraft.lure": "Lure",
   "enchantment.minecraft.power": "Power",
   "enchantment.minecraft.flame": "Flame",
   "enchantment.minecraft.punch": "Punch",
-  "enchantment.minecraft.infinity": "Infinity",
   "enchantment.minecraft.thorns": "Thorns",
-  "enchantment.minecraft.mending": "Mending",
-  "enchantment.minecraft.binding_curse": "Curse of Binding",
-  "enchantment.minecraft.vanishing_curse": "Curse of Vanishing",
-  "enchantment.minecraft.loyalty": "Loyalty",
-  "enchantment.minecraft.impaling": "Impaling",
-  "enchantment.minecraft.riptide": "Riptide",
-  "enchantment.minecraft.channeling": "Channeling",
-  "enchantment.minecraft.multishot": "Multishot",
-  "enchantment.minecraft.quick_charge": "Quick Charge",
-  "enchantment.minecraft.piercing": "Piercing",
+
   "enchantment.level.1": "1",
   "enchantment.level.2": "2",
   "enchantment.level.3": "3",
@@ -3211,7 +3217,7 @@
   "attribute.name.zombie.spawn_reinforcements": "Zombie Reinforcements",
   "attribute.name.generic.max_health": "Max Health",
   "attribute.name.generic.follow_range": "Mob Follow Range",
-  "attribute.name.generic.knockback_resistance": "Knockback Resistance",
+  "attribute.name.generic.knockback_resistance": "⚓",
   "attribute.name.generic.movement_speed": "Speed",
   "attribute.name.generic.flying_speed": "Flying Speed",
   "attribute.name.generic.attack_damage": "🗡",
