--- a/reNebula mint 16x 1.19/assets/minecraft/lang/en_ca.json
+++ b/reNebula mint 16x 1.19/assets/minecraft/lang/en_ca.json
@@ -96,7 +96,7 @@
   "menu.game": "Press ALT+F4 to Exit this Menu",
   "menu.singleplayer": "Singleplayer",
   "menu.multiplayer": "Hypixel",
-  "menu.online": "Ivycomb's Realm",
+  "menu.online": "Pay-to-Win Hypixel",
   "menu.options": "rtx settegs...",
   "menu.quit": "§kESCAPE",
   "menu.returnToMenu": "Touch Grass",
