--- a/Kepler-16x_1.19/assets/minecraft/lang/en_us.json
+++ b/Kepler-16x_1.19/assets/minecraft/lang/en_us.json
@@ -2,7 +2,7 @@
   "language.name": "English",
   "language.region": "United States",
   "language.code": "en_us",
-  "options.languageWarning": "§fTo use §eRenaptish§f, use English (Canada)!",
+  "options.languageWarning": "§fTo use §eRenaptish§f, use Renaptish (Renada)!",
   "potion.potency.0": "",
   "potion.potency.1": "2",
   "potion.potency.2": "3",
